[package]
name = "nrf24l01"
version = "0.3.0"
authors = ["Romuald Texier-Marcadé <romuadtm@gmail.com>"]
description = "A pure Rust user space driver for NRF24L01(+) transceivers on Linux."
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["embedded", "hardware-support"]
keywords = ["driver", "wireless", "radio", "transceiver", "nrf"]
repository = "https://github.com/rtxm/rust-nrf24l01"
homepage = "https://github.com/rtxm/rust-nrf24l01"
edition = "2018"

[features]
default = ["embassy_rp"]
rpi_accel = ["rppal"]
linux = ["spidev", "sysfs_gpio"]
embassy_rp = ["embedded-hal", "embassy-time", "embassy-rp", "defmt"]

[dependencies]
defmt = { version = "0.3", optional = true }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"], optional = true }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embedded-hal = { version = "=1.0.0-alpha.11", optional = true }
spidev = { version = "0.4", optional = true }
sysfs_gpio = { version = "0.5.1", optional = true }
rppal = { version = '0.1.3', optional = true }

[dev-dependencies]
# cortex
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
# defmt
defmt = "0.3"
defmt-serial = "0.6"
# panic
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
# embassy
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
# embedded hal
embedded-hal = { version = "=1.0.0-alpha.11" }
# allocator
embedded-alloc = "0.5.0"
# static cell
static_cell = { version = "1.1", features = ["nightly"] }
